--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
                 minhas habilidades para oferecer um serviço de suporte excepcional.</p>
             <p classe="apresentacao__segundo__conteudo"></p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__links" href="https://www.instagram.com/lufelipe9/" target="_blank" >Instagram</a>
-                <a class="apresentacao__links__links" href="https://github.com/LuissFelipe9" target="_blank" >Github</a>
+                <h2 class='apresentacao__links__subtitulo'>Acesse minhas redes</h2>
+                <a class="apresentacao__links__links" href="https://www.instagram.com/lufelipe9/"> <img src="assets/instagram.png">
+                    Instagram
+                </a>
+                <a class="apresentacao__links__links" href="https://github.com/LuissFelipe9"> <img src="assets/github.png">
+                    Github                  
+                </a>
+                <a class="apresentacao__links__links" href="https://www.linkedin.com/in/luis-felipe9/"> <img src="assets/linkedin.png">
+                    Linkedin                  
+                </a>
             </div>
 
         </section>
-        <img class="imagem-lf" src="LF REJKK_.png" alt="Foto do Luis Felipe em frente ao espelho">
+        <img class="imagem-lf" src="assets/LF.png" alt="Foto do Luis Felipe em frente ao espelho">
     </main>
     <footer></footer>
 </body>
