Refact: correção de texto

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 minhas habilidades para oferecer um serviço de suporte excepcional.</p>
             <p classe="apresentacao__segundo__conteudo"></p>
             <div class="apresentacao__links">
-                <h2 class='apresentacao__links__subtitulo'>Acesse minhas redes</h2>
+                <h2 class='apresentacao__links__subtitulo'>ACESSE MINHAS REDES</h2>
                 <a class="apresentacao__links__links" href="https://www.instagram.com/lufelipe9/"> <img src="assets/instagram.png">
                     Instagram
                 </a>
